[package]
name = "staff"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Music theory library with midi, notes, chords, scales, and more"
repository = "https://github.com/staff-rs/staff"
homepage = "https://staff-rs.github.io"

[features]
std = []
fretboard = ["std"]
serde = ["dep:serde"]
ui = [
    "std",
    "dep:bumpalo",
    "dep:console_error_panic_hook",
    "dep:dioxus",
    "dep:dioxus-web",
    "dep:dioxus-signals",
    "dep:dioxus-resize-observer",
    "dep:dioxus-use-mounted"
]
full = ["fretboard", "serde", "ui"]
default = ["std"]

[lib]
name = "staff"

[[bin]]
name = "staff"
required-features = ["ui"]

[dependencies]
num-traits = "0.2.14"
console_error_panic_hook = { version = "0.1.7", optional = true }
dioxus = { version = "0.4", optional = true }
dioxus-signals = { version = "0.4", optional = true }
dioxus-web = { version = "0.4", optional = true }
dioxus-resize-observer= { git = "https://github.com/adlrwbr/dioxus-resize-observer/", branch = "dioxus-0.4", optional = true }
dioxus-use-mounted= { git = "https://github.com/adlrwbr/dioxus-use-mounted/", branch = "dioxus-0.4", optional = true }
bumpalo = { version = "3.14.0", features = ["boxed"], optional = true }

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "bench"
required-features = ["ui"]

[[example]]
name = "fret_diagram"
required-features = ["ui"]

[[example]]
name = "ui"
required-features = ["ui"]
